fix(styles) - fix layout issues

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -6,19 +6,20 @@ body,
 }
 
 /* messages */
+.right_content_panel {
+  display: flex;
+  flex-direction: column;
+}
 .messages {
-  height: 450px;
+  height: 400px;
+  min-height: 350px;
   overflow-y: scroll;
 }
 
 /* messages form */
 
 .message__form {
-  position: fixed !important;
-  bottom: 1em;
-  margin-left: 320px !important;
-  left: 0;
-  right: 1em;
+  width: 100%;
   z-index: 200;
 }
 
